XP-4482 Content Wizard toolbar - Fix menu overflow and alignment of the help-text icon
Adjusted minimize and help buttons position.

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
@@ -10,6 +10,10 @@
     .split-panel .minimize-edit {
       display: block;
     }
+
+    .wizard-step-navigator-and-toolbar .help-text-button {
+      margin-right: 40px;
+    }
   }
 
   .toolbar {
