--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -117,7 +117,7 @@
     display: inline-flex;
     align-items: center;
     height: 40px;
-    margin-right: 30px;
+    margin-right: 15px;
     float: right;
     vertical-align: top;
     overflow: hidden;
