--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/wizard/content-wizard-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/wizard/content-wizard-panel.less
@@ -115,7 +115,7 @@
 
       .minimize-edit {
         position: absolute;
-        left: 34px !important;
+        left: 40px !important;
         top: 0;
         &:before {
           transform: rotate(0deg);
@@ -129,8 +129,8 @@
     position: fixed;
     top: 85px;
     height: 40px;
-    width: 30px;
-    margin-left: -30px;
+    width: 40px;
+    margin-left: -40px;
     text-align: center;
     line-height: 40px;
     overflow: hidden;
